now onto the docs

--- a/index.html
+++ b/index.html
@@ -61,6 +61,29 @@
           </div>
         </div>
       </nav>
+
+      <div class="header-inner text-white text-center">
+        <div class="container grid">
+          <div class="header-inner-left">
+            <h1>
+              your most trusted <br />
+              <span>health partner</span>
+            </h1>
+            <p class="lead">the best match services for you</p>
+            <p class="text text-md">
+              Lorem ipsum, dolor sit amet consectetur adipisicing elit. Labore,
+              ipsam quisquam veniam rerum dolorum adipisci?
+            </p>
+            <div class="btn-group">
+              <a href="#" class="btn btn-white">Learn More</a>
+              <a href="#" class="btn btn-light-blue">Sign In</a>
+            </div>
+          </div>
+          <div class="header-inner-right">
+            <img src="/images/header.png" alt="Doctors" />
+          </div>
+        </div>
+      </div>
     </header>
     <!--end of header-->
 
