tiny modifications h1 tag

--- a/index.html
+++ b/index.html
@@ -67,12 +67,16 @@
           <div class="header-inner-left">
             <h1>
               your most trusted <br />
-              <span>health partner</span>
+              <span>healthcare partner</span>
             </h1>
-            <p class="lead">the best match services for you</p>
+            <br />
+            <p class="lead">Transforming Lives Through Compassionate Care</p>
             <p class="text text-md">
-              Lorem ipsum, dolor sit amet consectetur adipisicing elit. Labore,
-              ipsam quisquam veniam rerum dolorum adipisci?
+              At Paired Health Solutions, we provide exceptional care and
+              support tailored to your needs. Our dedicated team is committed to
+              improving your well-being and enhancing your quality of life.
+              Experience compassionate and personalized services that make a
+              difference. Learn more and sign up today!
             </p>
             <div class="btn-group">
               <a href="#" class="btn btn-white">Learn More</a>
