fixing logo oversizing

--- a/index.html
+++ b/index.html
@@ -16,7 +16,9 @@
       <nav class="navbar bg-blue">
         <div class="container flex">
           <a href="index.html" class="navbar-brand">
-            <img src="/images/logo.png" alt="site logo" />
+            <div class="logo">
+              <img src="/images/logo.png" alt="Logo" />
+            </div>
           </a>
           <button type="button" class="navbar-show-btn">
             <img src="/images/ham-menu-icon.png" alt="menu-open" />
@@ -65,7 +67,7 @@
       <div class="header-inner text-white text-center">
         <div class="container grid">
           <div class="header-inner-left">
-            <h1>
+            <h1 class="header-title">
               your most trusted <br />
               <span>healthcare partner</span>
             </h1>
