fixing spacing at different views

--- a/index.html
+++ b/index.html
@@ -68,11 +68,10 @@
         <div class="container grid">
           <div class="header-inner-left">
             <h1 class="header-title">
-              your most trusted <br />
-              <span>healthcare partner</span>
+              <strong>Paired Health Solutions</strong>
             </h1>
             <br />
-            <p class="lead">Transforming Lives Through Compassionate Care</p>
+            <p class="lead">"Transforming Lives Through Compassionate Care"</p>
             <p class="text text-md">
               At Paired Health Solutions, we provide exceptional care and
               support tailored to your needs. Our dedicated team is committed to
@@ -93,6 +92,40 @@
     </header>
     <!--end of header-->
 
+    <main>
+      <!-- About Section -->
+      <section id="about" class="about py">
+        <div class="container">
+          <div class="container grid">
+            <div class="about-left" text -center>
+              <div class="section-head">
+                <h2>About Us</h2>
+                <div class="border-line"></div>
+              </div>
+              <p class="text text-lg">
+                Paired Health Solutions is a trusted healthcare provider
+                dedicated to delivering high-quality, personalized care and
+                support. We prioritize the well-being and dignity of our
+                patients, offering exceptional care tailored to individual
+                needs. Choose us for reliable and patient-centered healthcare.
+                At Paired Health Solutions, we understand the unique needs and
+                challenges that individuals face when it comes to their health.
+                That's why we offer a comprehensive range of personalized
+                services tailored to meet the specific requirements of each
+                patient.
+              </p>
+              <a href="#" class="btn btn-white">Learn More</a>
+            </div>
+            <div class="about-right flex">
+              <div class="img">
+                <img src="/images/about-img.png" alt="" />
+              </div>
+            </div>
+          </div>
+        </div>
+      </section>
+      <!-- End of About Section -->
+    </main>
     <!-- custom JS -->
     <script src="js\script.js"></script>
   </body>
