--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
             </p>
             <div class="btn-group">
               <a href="#" class="btn btn-white">Learn More</a>
-              <a href="#" class="btn btn-light-blue">Sign In</a>
+              <a href="#" class="btn btn-light-blue">Sign Up</a>
             </div>
           </div>
           <div class="header-inner-right">
