styling about section

--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
         <div class="container grid">
           <div class="header-inner-left">
             <h1 class="header-title">
-              <strong>Paired Health Solutions</strong>
+              <strong><b>Paired Health Solutions</b></strong>
             </h1>
             <br />
             <p class="lead">"Transforming Lives Through Compassionate Care"</p>
@@ -76,8 +76,7 @@
               At Paired Health Solutions, we provide exceptional care and
               support tailored to your needs. Our dedicated team is committed to
               improving your well-being and enhancing your quality of life.
-              Experience compassionate and personalized services that make a
-              difference. Learn more and sign up today!
+              Learn more and sign up today!
             </p>
             <div class="btn-group">
               <a href="#" class="btn btn-white">Learn More</a>
@@ -95,9 +94,9 @@
     <main>
       <!-- About Section -->
       <section id="about" class="about py">
-        <div class="container">
+        <div class="about-inner">
           <div class="container grid">
-            <div class="about-left" text -center>
+            <div class="about-left text-center">
               <div class="section-head">
                 <h2>About Us</h2>
                 <div class="border-line"></div>
@@ -108,17 +107,12 @@
                 support. We prioritize the well-being and dignity of our
                 patients, offering exceptional care tailored to individual
                 needs. Choose us for reliable and patient-centered healthcare.
-                At Paired Health Solutions, we understand the unique needs and
-                challenges that individuals face when it comes to their health.
-                That's why we offer a comprehensive range of personalized
-                services tailored to meet the specific requirements of each
-                patient.
               </p>
               <a href="#" class="btn btn-white">Learn More</a>
             </div>
             <div class="about-right flex">
               <div class="img">
-                <img src="/images/about-img.png" alt="" />
+                <img src="/images/about-img.png" alt="About Us" />
               </div>
             </div>
           </div>
