starting banner one

--- a/index.html
+++ b/index.html
@@ -119,6 +119,16 @@
         </div>
       </section>
       <!-- End of About Section -->
+
+      <!-- Banner One -->
+      <section id="banner-one" class="banner-one text-center">
+        <div class="container text-white">
+          <blockquote class="lead">
+            <i class="fas fa-quote-left"></i>
+            <!-- finish up later. -->
+          </blockquote>
+        </div>
+      </section>
     </main>
     <!-- custom JS -->
     <script src="js\script.js"></script>
