--- a/index.html
+++ b/index.html
@@ -120,15 +120,18 @@
       </section>
       <!-- End of About Section -->
 
-      <!-- Banner One -->
+      <!-- banner one -->
       <section id="banner-one" class="banner-one text-center">
         <div class="container text-white">
           <blockquote class="lead">
-            <i class="fas fa-quote-left"></i>
-            <!-- finish up later. -->
+            <i class="fas fa-quote-left"></i> When you are young and healthy, it
+            never occurs to you that in a single second your whole life could
+            change. <i class="fas fa-quote-right"></i>
           </blockquote>
+          <small class="text text-sm">- Anonim Nano</small>
         </div>
       </section>
+      <!-- end of banner one -->
     </main>
     <!-- custom JS -->
     <script src="js\script.js"></script>
