--- a/index.html
+++ b/index.html
@@ -199,22 +199,72 @@
         </div>
       </section>
       <!-- end of services section -->
-<!-- banner two section -->
-        <section id = "banner-two" class = "banner-two text-center">
-            <div class = "container grid">
-                <div class = "banner-two-left">
-                    <img src = "images/banner-2-img.png">
-                </div>
-                <div class = "banner-two-right">
-                    <p class = "lead text-white">When you are young and healthy, it never occurs to you that in a single second your whole life could change.</p>
-                    <div class = "btn-group">
-                        <a href = "#" class = "btn btn-white">Learn More</a>
-                        <a href = "#" class = "btn btn-light-blue">Sign In</a>
-                    </div>
-                </div>
+
+      <!-- banner two section -->
+      <section id="banner-two" class="banner-two text-center">
+        <div class="container grid">
+          <div class="banner-two-left">
+            <img src="images/banner-2-img.png" />
+          </div>
+          <div class="banner-two-right">
+            <p class="lead text-white">
+              When you are young and healthy, it never occurs to you that in a
+              single second your whole life could change.
+            </p>
+            <div class="btn-group">
+              <a href="#" class="btn btn-white">Learn More</a>
+              <a href="#" class="btn btn-light-blue">Sign In</a>
             </div>
-        </section>
-        <!-- end of banner two section -->
+          </div>
+        </div>
+      </section>
+      <!-- end of banner two section -->
+
+      <!-- doctors section -->
+      <section id="doc-panel" class="doc-panel py">
+        <div class="container">
+          <div class="section-head">
+            <h2>Our Doctor Panel</h2>
+          </div>
+
+          <div class="doc-panel-inner grid">
+            <div class="doc-panel-item">
+              <div class="img flex">
+                <img src="images/doc-1.png" alt="doctor image" />
+                <div class="info text-center bg-blue text-white flex">
+                  <p class="lead">Samuel Goe</p>
+                  <p class="text-lg">Medicine</p>
+                </div>
+              </div>
+            </div>
+
+            <div class="doc-panel-item">
+              <div class="img flex">
+                <img src="images/doc-2.png" alt="doctor image" />
+                <div class="info text-center bg-blue text-white flex">
+                  <p class="lead">elizabeth ira</p>
+                  <p class="text-lg">Cardiology</p>
+                </div>
+              </div>
+            </div>
+
+            <div class="doc-panel-item">
+              <div class="img flex">
+                <img src="images/doc-3.png" alt="doctor image" />
+                <div class="info text-center bg-blue text-white flex">
+                  <p class="lead">tanya collins</p>
+                  <p class="text-lg">Medicine</p>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </section>
+      <!-- end of doctors section -->
+
+      <!-- package services section-->
+      <section></section>
+    </main>
 
     <!-- custom JS -->
     <script src="js\script.js"></script>
