--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         <div class="container flex">
           <a href="index.html" class="navbar-brand">
             <div class="logo">
-              <img src="/images/logo.png" alt="Logo" />
+              <img src="/images/logo1.png" alt="Logo" />
             </div>
           </a>
           <button type="button" class="navbar-show-btn">
