package services section and general content

--- a/index.html
+++ b/index.html
@@ -5,6 +5,14 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Paired Health Solutions</title>
+    <!-- font awesome -->
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta2/css/all.min.css"
+      integrity="sha512-YWzhKL2whUzgiheMoBFwW8CKV4qpHQAEuvilg9FAn5VJUDwKZZxkJNuGM4XkWuk94WCrrwslk8yWNGmY1EduTA=="
+      crossorigin="anonymous"
+      referrerpolicy="no-referrer"
+    />
     <!-- normalize css -->
     <link rel="stylesheet" href="css/normalize.css" />
     <!-- custom css -->
@@ -154,9 +162,11 @@
               </div>
               <h3>Cardio Monitoring</h3>
               <p class="text text-sm">
-                Lorem ipsum dolor sit amet consectetur adipisicing elit.
-                Perspiciatis possimus doloribus facilis velit, assumenda tempora
-                quas mollitia quos voluptatibus consequatur!
+                Our expert team utilizes cutting-edge technology for continuous
+                tracking and analysis of vital cardiovascular parameters. We
+                strive to detect potential heart issues, provide timely
+                interventions, and improve overall heart health. Contact us for
+                personalized cardio monitoring solutions.
               </p>
             </article>
 
@@ -166,9 +176,12 @@
               </div>
               <h3>Medical Treatment</h3>
               <p class="text text-sm">
-                Lorem ipsum dolor sit amet consectetur adipisicing elit.
-                Perspiciatis possimus doloribus facilis velit, assumenda tempora
-                quas mollitia quos voluptatibus consequatur!
+                Our experienced team delivers personalized care and
+                evidence-based treatments to address a wide range of medical
+                conditions. We prioritize patient well-being and employ the
+                latest medical advancements to ensure effective and
+                compassionate treatment. Reach out to us for exceptional medical
+                care tailored to your needs.
               </p>
             </article>
 
@@ -178,9 +191,10 @@
               </div>
               <h3>Emergency Help</h3>
               <p class="text text-sm">
-                Lorem ipsum dolor sit amet consectetur adipisicing elit.
-                Perspiciatis possimus doloribus facilis velit, assumenda tempora
-                quas mollitia quos voluptatibus consequatur!
+                Our dedicated team is trained to handle urgent medical
+                situations with utmost professionalism and efficiency. Trust us
+                to provide immediate support and necessary interventions in
+                times of crisis. Your well-being is our priority.
               </p>
             </article>
 
@@ -190,9 +204,12 @@
               </div>
               <h3>First Aid</h3>
               <p class="text text-sm">
-                Lorem ipsum dolor sit amet consectetur adipisicing elit.
-                Perspiciatis possimus doloribus facilis velit, assumenda tempora
-                quas mollitia quos voluptatibus consequatur!
+                At Paired Health Solutions, we offer comprehensive first aid
+                services to address minor injuries, accidents, and medical
+                emergencies. Our skilled team is equipped with the knowledge and
+                resources to provide timely and effective first aid care. Count
+                on us to deliver immediate assistance and ensure your safety in
+                critical situations.
               </p>
             </article>
           </div>
@@ -208,8 +225,7 @@
           </div>
           <div class="banner-two-right">
             <p class="lead text-white">
-              When you are young and healthy, it never occurs to you that in a
-              single second your whole life could change.
+              Contact Us for Personalized Care and Support
             </p>
             <div class="btn-group">
               <a href="#" class="btn btn-white">Learn More</a>
@@ -262,8 +278,54 @@
       </section>
       <!-- end of doctors section -->
 
-      <!-- package services section-->
-      <section></section>
+      <!-- package services section -->
+      <section id="package-service" class="package-service py text-center">
+        <div class="container">
+          <div class="package-service-head text-white">
+            <h2>Package Service</h2>
+            <p class="text text-lg">Best service package for you</p>
+          </div>
+          <div class="package-service-inner grid">
+            <div class="package-service-item bg-white">
+              <div class="icon flex">
+                <i class="fas fa-phone fa-2x"></i>
+              </div>
+              <h3>Personal care and support</h3>
+              <p class="text text-sm">
+                Assisting individuals with daily living activities such as
+                bathing, dressing, grooming, and medication management.
+              </p>
+              <a href="#" class="btn btn-blue">Read More</a>
+            </div>
+
+            <div class="package-service-item bg-white">
+              <div class="icon flex">
+                <i class="fas fa-calendar-alt fa-2x"></i>
+              </div>
+              <h3>Rehabilitation Support</h3>
+              <p class="text text-sm">
+                Assisting individuals in their recovery process after surgery,
+                illness, or injury, helping them regain independence and improve
+                their quality of life.
+              </p>
+              <a href="#" class="btn btn-blue">Read More</a>
+            </div>
+
+            <div class="package-service-item bg-white">
+              <div class="icon flex">
+                <i class="fas fa-comments fa-2x"></i>
+              </div>
+              <h3>Health Monitoring</h3>
+              <p class="text text-sm">
+                Monitoring and tracking clients' health conditions, including
+                vital signs, medication adherence, and overall well-being.
+              </p>
+              <a href="#" class="btn btn-blue">Read More</a>
+            </div>
+          </div>
+        </div>
+      </section>
+      <!-- end of package services section -->
     </main>
 
     <!-- custom JS -->
