adding contact emails

--- a/index.html
+++ b/index.html
@@ -532,7 +532,11 @@
               <li>8:00 PM - 11:00 PM</li>
               <li>
                 <i class="fas fa-envelope"></i>
-                <span>revomedic@gmail.com</span>
+                <span>info@pairedhealthsolutions.co.uk</span>
+              </li>
+              <li>
+                <i class="fas fa-envelope"></i>
+                <span>hr@pairedhealthsolutions.co.uk</span>
               </li>
               <li>
                 <i class="fas fa-phone"></i>
