--- a/index.html
+++ b/index.html
@@ -219,10 +219,10 @@
 
       <!-- banner two section -->
       <section id="banner-two" class="banner-two text-center">
-        <div class="container grid">
+        <!-- <div class="container grid">
           <div class="banner-two-left">
             <img src="images/banner-2-img.png" />
-          </div>
+          </div> -->
           <div class="banner-two-right">
             <p class="lead text-white">
               Contact Us for Personalized Care and Support
@@ -354,10 +354,10 @@
                 </p>
                 <div class="info flex">
                   <small class="text text-sm"
-                    ><i class="fas fa-clock"></i> October 27, 2021</small
+                    ><i class="fas fa-clock"></i> October 27, 2022</small
                   >
                   <small class="text text-sm"
-                    ><i class="fas fa-comment"></i> 5 comments</small
+                    ><i class="fas fa-comment"></i> 6 comments</small
                   >
                 </div>
               </div>
@@ -383,7 +383,7 @@
                 </p>
                 <div class="info flex">
                   <small class="text text-sm"
-                    ><i class="fas fa-clock"></i> October 27, 2021</small
+                    ><i class="fas fa-clock"></i> November 23, 2022</small
                   >
                   <small class="text text-sm"
                     ><i class="fas fa-comment"></i> 5 comments</small
@@ -412,10 +412,10 @@
                 </p>
                 <div class="info flex">
                   <small class="text text-sm"
-                    ><i class="fas fa-clock"></i> October 27, 2021</small
+                    ><i class="fas fa-clock"></i> December 2, 2023</small
                   >
                   <small class="text text-sm"
-                    ><i class="fas fa-comment"></i> 5 comments</small
+                    ><i class="fas fa-comment"></i> 8 comments</small
                   >
                 </div>
               </div>
@@ -429,14 +429,7 @@
       <section id="contact" class="contact py">
         <div class="container grid">
           <div class="contact-left">
-            <iframe
-              src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2384.6268289831164!2d-6.214682984112116!3d53.29621947996855!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x486709e0c9c80f8f%3A0x92f408d10f2277c2!2sREVO!5e0!3m2!1sen!2snp!4v1636264848776!5m2!1sen!2snp"
-              width="600"
-              height="450"
-              style="border: 0"
-              allowfullscreen=""
-              loading="lazy"
-            ></iframe>
+            <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2484.3954721931073!2d0.05151647686438607!3d51.487609871808864!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x47d8a8f141a9455d%3A0xa1083b75b39eda24!2sRutland%20House%2C%20Ogilby%20St%2C%20London%20SE18%205EP%2C%20UK!5e0!3m2!1sen!2sng!4v1687542500223!5m2!1sen!2sng" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
           </div>
           <div class="contact-right text-white text-center bg-blue">
             <div class="contact-head">
@@ -487,14 +480,11 @@
               <img src="images/logo1.png" />
             </div>
             <p class="text text-md">
-              Lorem ipsum dolor, sit amet consectetur adipisicing elit. Debitis
-              saepe incidunt fugiat optio corporis ea!
+              Paired Health Solutions Ltd is a leading healthcare provider committed to delivering exceptional care and support to individuals in need. With a team of dedicated professionals, we strive to enhance the well-being and quality of life for our clients. Our comprehensive range of services includes personalized care plans, medical treatments, emergency support, and more. With a strong emphasis on excellence, compassion, and integrity, we aim to make a positive difference in the lives of those we serve. Trust Paired Health Solutions Ltd for your healthcare needs.
             </p>
             <address>
-              Medic Clinic <br />
-              69 Deerpark Rd, Mount Merrion <br />
-              Co. Dublin, A94 E9D3 <br />
-              Ireland
+              <i class="fas fa-map-marker-alt"></i>
+              Flat 8, Rutland house <br> Ogilby St, London SE18 5EP, UK.
             </address>
           </div>
 
@@ -540,7 +530,7 @@
               </li>
               <li>
                 <i class="fas fa-phone"></i>
-                <span>+003 478 2834(00)</span>
+                <span>+44 7594 302061</span>
               </li>
             </ul>
           </div>
