--- a/index.html
+++ b/index.html
@@ -38,19 +38,19 @@
             </button>
             <ul class="navbar-nav">
               <li class="nav-item">
-                <a href="#" class="nav-link">Home</a>
+                <a href="#home" class="nav-link">Home</a>
               </li>
               <li class="nav-item">
-                <a href="#" class="nav-link">About Us</a>
+                <a href="#about-us" class="nav-link">About Us</a>
               </li>
               <li class="nav-item">
-                <a href="#" class="nav-link">Services</a>
+                <a href="#services" class="nav-link">Services</a>
               </li>
               <li class="nav-item">
-                <a href="#" class="nav-link">FAQs</a>
+                <a href="#packages" class="nav-link">Packages</a>
               </li>
               <li class="nav-item">
-                <a href="#" class="nav-link">Contact Us</a>
+                <a href="#contact-us" class="nav-link">Contact Us</a>
               </li>
             </ul>
             <div class="search-bar">
