fixing redirection of the nav links

--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
   </head>
   <body>
     <!--header-->
+    <section id="home">
     <header class="header bg-blue">
       <nav class="navbar bg-blue">
         <div class="container flex">
@@ -47,10 +48,10 @@
                 <a href="#services" class="nav-link">Services</a>
               </li>
               <li class="nav-item">
-                <a href="#packages" class="nav-link">Packages</a>
+                <a href="#package-service" class="nav-link">Packages</a>
               </li>
               <li class="nav-item">
-                <a href="#contact-us" class="nav-link">Contact Us</a>
+                <a href="#footer" class="nav-link">Contact Us</a>
               </li>
             </ul>
             <div class="search-bar">
@@ -97,11 +98,12 @@
         </div>
       </div>
     </header>
+    </section>
     <!--end of header-->
 
     <main>
       <!-- About Section -->
-      <section id="about" class="about py">
+      <section id="about-us" class="about py">
         <div class="about-inner">
           <div class="container grid">
             <div class="about-left text-center">
