--- a/index.html
+++ b/index.html
@@ -231,7 +231,7 @@
             </p>
             <div class="btn-group">
               <a href="#" class="btn btn-white">Learn More</a>
-              <a href="#" class="btn btn-light-blue">Sign In</a>
+              <a href="#" class="btn btn-light-blue">Sign Up</a>
             </div>
           </div>
         </div>
@@ -333,7 +333,7 @@
       <section id="posts" class="posts py">
         <div class="container">
           <div class="section-head">
-            <h2>Latest Post</h2>
+            <h2>Latest Blog Posts</h2>
           </div>
           <div class="posts-inner grid">
             <article class="post-item bg-white">
@@ -346,13 +346,7 @@
                   global pandemic.
                 </h4>
                 <p class="text text-sm">
-                  Lorem ipsum dolor sit amet consectetur, adipisicing elit.
-                  Dolor voluptas eius recusandae sunt obcaecati esse facere
-                  cumque. Aliquid, cupiditate debitis.
-                </p>
-                <p class="text text-sm">
-                  Lorem ipsum dolor sit amet consectetur adipisicing elit. Nobis
-                  quia ipsam, quis iure sed nulla.
+                  In these challenging times, we have witnessed incredible acts of compassion and dedication. Read about inspiring stories of healthcare providers going above and beyond to deliver person and family centered care during the global pandemic.
                 </p>
                 <div class="info flex">
                   <small class="text text-sm"
@@ -371,18 +365,10 @@
               </div>
               <div class="content">
                 <h4>
-                  Inspiring stories of person and family centered care during a
-                  global pandemic.
+                  The Importance of Mental Health and Self-Care.
                 </h4>
                 <p class="text text-sm">
-                  Lorem ipsum dolor sit amet consectetur, adipisicing elit.
-                  Dolor voluptas eius recusandae sunt obcaecati esse facere
-                  cumque. Aliquid, cupiditate debitis.
-                </p>
-                <p class="text text-sm">
-                  Lorem ipsum dolor sit amet consectetur adipisicing elit. Nobis
-                  quia ipsam, quis iure sed nulla.
-                </p>
+                  Learn about the significance of mental health and the importance of self-care in maintaining a balanced and fulfilling life. Discover practical strategies and resources for enhancing your mental well-being.
                 <div class="info flex">
                   <small class="text text-sm"
                     ><i class="fas fa-clock"></i> November 23, 2022</small
@@ -400,13 +386,10 @@
               </div>
               <div class="content">
                 <h4>
-                  Inspiring stories of person and family centered care during a
-                  global pandemic.
+                  Understanding the Benefits of Regular Exercise
                 </h4>
                 <p class="text text-sm">
-                  Lorem ipsum dolor sit amet consectetur, adipisicing elit.
-                  Dolor voluptas eius recusandae sunt obcaecati esse facere
-                  cumque. Aliquid, cupiditate debitis.
+                  Explore the numerous benefits of incorporating regular exercise into your lifestyle. From improved cardiovascular health to enhanced mood and mental well-being, discover how exercise can positively impact your overall quality of life.
                 </p>
                 <p class="text text-sm">
                   Lorem ipsum dolor sit amet consectetur adipisicing elit. Nobis
@@ -513,15 +496,17 @@
           </div>
 
           <div class="footer-item">
-            <h3 class="footer-head">make an appointment</h3>
+            <h3 class="footer-head">make an appointment.</h3>
             <p class="text text-md">
-              Lorem, ipsum dolor sit amet consectetur adipisicing elit.
-              Voluptatum, omnis.
+              Contact us to schedule an appointment with our healthcare experts. We are
+    here to provide you with personalized care and support.
             </p>
             <ul class="appointment-info">
-              <li>8:00 AM - 11:00 AM</li>
-              <li>2:00 PM - 05:00 PM</li>
-              <li>8:00 PM - 11:00 PM</li>
+              <li>Opening Hours:</li>
+              <li>Monday - Friday: 8:00 AM - 6:00 PM</li>
+              <li>Saturday: 9:00 AM - 2:00 PM</li>
+              <li>Sunday: Closed</li>
+              <br>
               <li>
                 <i class="fas fa-envelope"></i>
                 <span>info@pairedhealthsolutions.co.uk</span>
