--- a/index.html
+++ b/index.html
@@ -391,10 +391,6 @@
                 <p class="text text-sm">
                   Explore the numerous benefits of incorporating regular exercise into your lifestyle. From improved cardiovascular health to enhanced mood and mental well-being, discover how exercise can positively impact your overall quality of life.
                 </p>
-                <p class="text text-sm">
-                  Lorem ipsum dolor sit amet consectetur adipisicing elit. Nobis
-                  quia ipsam, quis iure sed nulla.
-                </p>
                 <div class="info flex">
                   <small class="text text-sm"
                     ><i class="fas fa-clock"></i> December 2, 2023</small
@@ -419,8 +415,9 @@
           <div class="contact-right text-white text-center bg-blue">
             <div class="contact-head">
               <h3 class="lead">Contact Us</h3>
+              <br>
               <p class="text text-md">
-                Lorem ipsum dolor sit amet consectetur adipisicing elit. Fuga.
+                We would love to hear from you! Feel free to reach out to us with any inquiries or questions you may have.
               </p>
             </div>
             <form>
@@ -514,6 +511,10 @@
               <li>
                 <i class="fas fa-envelope"></i>
                 <span>hr@pairedhealthsolutions.co.uk</span>
+              </li>
+              <li>
+                <i class="fas fa-phone"></i>
+                <span>+44 7944 624143</span>
               </li>
               <li>
                 <i class="fas fa-phone"></i>
