--- a/index.html
+++ b/index.html
@@ -462,7 +462,7 @@
               <img src="images/logo1.png" />
             </div>
             <p class="text text-md">
-              Paired Health Solutions Ltd is a leading healthcare provider committed to delivering exceptional care and support to individuals in need. With a team of dedicated professionals, we strive to enhance the well-being and quality of life for our clients. Our comprehensive range of services includes personalized care plans, medical treatments, emergency support, and more. With a strong emphasis on excellence, compassion, and integrity, we aim to make a positive difference in the lives of those we serve. Trust Paired Health Solutions Ltd for your healthcare needs.
+              Paired Health Solutions is a leading healthcare provider committed to delivering exceptional care and support to individuals in need. With a team of dedicated professionals, we strive to enhance the well-being and quality of life for our clients.
             </p>
             <address>
               <i class="fas fa-map-marker-alt"></i>
