--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
                 <a href="#package-service" class="nav-link">Packages</a>
               </li>
               <li class="nav-item">
-                <a href="#footer" class="nav-link">Contact Us</a>
+                <a href="#contact-us" class="nav-link">Contact Us</a>
               </li>
             </ul>
             <div class="search-bar">
@@ -85,11 +85,11 @@
               At Paired Health Solutions, we provide exceptional care and
               support tailored to your needs. Our dedicated team is committed to
               improving your well-being and enhancing your quality of life.
-              Learn more and sign up today!
+              Learn more and contact us today!
             </p>
             <div class="btn-group">
-              <a href="#" class="btn btn-white">Learn More</a>
-              <a href="#" class="btn btn-light-blue">Sign Up</a>
+              <a href="#about-us" class="btn btn-white">Learn More</a>
+              <a href="#contact-us" class="btn btn-light-blue">Contact Us</a>
             </div>
           </div>
           <div class="header-inner-right">
@@ -118,7 +118,7 @@
                 patients, offering exceptional care tailored to individual
                 needs. Choose us for reliable and patient-centered healthcare.
               </p>
-              <a href="#" class="btn btn-white">Learn More</a>
+              <a href="#package-service" class="btn btn-white">Learn More</a>
             </div>
             <div class="about-right flex">
               <div class="img">
@@ -230,8 +230,7 @@
               Contact Us for Personalized Care and Support
             </p>
             <div class="btn-group">
-              <a href="#" class="btn btn-white">Learn More</a>
-              <a href="#" class="btn btn-light-blue">Sign Up</a>
+              <a href="#" class="btn btn-light-blue">Contact Us</a>
             </div>
           </div>
         </div>
@@ -407,7 +406,7 @@
       <!-- end of posts section -->
 
       <!-- contact section -->
-      <section id="contact" class="contact py">
+      <section id="contact-us" class="contact py">
         <div class="container grid">
           <div class="contact-left">
             <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2484.3954721931073!2d0.05151647686438607!3d51.487609871808864!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x47d8a8f141a9455d%3A0xa1083b75b39eda24!2sRutland%20House%2C%20Ogilby%20St%2C%20London%20SE18%205EP%2C%20UK!5e0!3m2!1sen!2sng!4v1687542500223!5m2!1sen!2sng" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
