--- a/index.html
+++ b/index.html
@@ -88,8 +88,8 @@
               Learn more and contact us today!
             </p>
             <div class="btn-group">
-              <a href="#about-us" class="btn btn-white">Learn More</a>
-              <a href="#contact-us" class="btn btn-light-blue">Contact Us</a>
+              <a href="#about-us" class="btn btn-white learn-more-btn">Learn More</a>
+              <a href="#contact-us" class="btn btn-light-blue contact-us-btn">Contact Us</a>
             </div>
           </div>
           <div class="header-inner-right">
@@ -118,7 +118,7 @@
                 patients, offering exceptional care tailored to individual
                 needs. Choose us for reliable and patient-centered healthcare.
               </p>
-              <a href="#package-service" class="btn btn-white">Learn More</a>
+              <a href="#package-service" class="btn btn-blue our-services-btn">Our Services</a>
             </div>
             <div class="about-right flex">
               <div class="img">
@@ -230,7 +230,7 @@
               Contact Us for Personalized Care and Support
             </p>
             <div class="btn-group">
-              <a href="#" class="btn btn-light-blue">Contact Us</a>
+              <a href="#contact-us" class="btn btn-light-blue contact-us-btn">Contact Us</a>
             </div>
           </div>
         </div>
