--- a/index.html
+++ b/index.html
@@ -406,48 +406,68 @@
       <!-- end of posts section -->
 
       <!-- contact section -->
-      <section id="contact-us" class="contact py">
-        <div class="container grid">
-          <div class="contact-left">
-            <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2484.3954721931073!2d0.05151647686438607!3d51.487609871808864!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x47d8a8f141a9455d%3A0xa1083b75b39eda24!2sRutland%20House%2C%20Ogilby%20St%2C%20London%20SE18%205EP%2C%20UK!5e0!3m2!1sen!2sng!4v1687542500223!5m2!1sen!2sng" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
-          </div>
-          <div class="contact-right text-white text-center bg-blue">
-            <div class="contact-head">
-              <h3 class="lead">Contact Us</h3>
-              <br>
-              <p class="text text-md">
-                We would love to hear from you! Feel free to reach out to us with any inquiries or questions you may have.
-              </p>
+        <section id="contact-us" class="contact py">
+          <div class="container grid">
+            <div class="contact-left">
+              <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2484.3954721931073!2d0.05151647686438607!3d51.487609871808864!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x47d8a8f141a9455d%3A0xa1083b75b39eda24!2sRutland%20House%2C%20Ogilby%20St%2C%20London%20SE18%205EP%2C%20UK!5e0!3m2!1sen!2sng!4v1687542500223!5m2!1sen!2sng" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
             </div>
-            <form>
-              <div class="form-element">
-                <input
-                  type="text"
-                  class="form-control"
-                  placeholder="Your name"
-                />
+            <div class="contact-right text-white text-center bg-blue">
+              <div class="contact-head">
+                <h3 class="lead">Contact Us</h3>
+                <br>
+                <p class="text text-md">
+                  We would love to hear from you! Feel free to reach out to us with any inquiries or questions you may have.
+                </p>
               </div>
-              <div class="form-element">
-                <input
-                  type="email"
-                  class="form-control"
-                  placeholder="Your email"
-                />
-              </div>
-              <div class="form-element">
-                <textarea
-                  rows="5"
-                  placeholder="Your Message"
-                  class="form-control"
-                ></textarea>
-              </div>
-              <button type="submit" class="btn btn-white btn-submit">
-                <i class="fas fa-arrow-right"></i> Send Message
-              </button>
-            </form>
+              <br>
+              <ul class="contact-info">
+                <li>
+                  <i class="fas fa-envelope"></i>
+                  <span>info@pairedhealthsolutions.co.uk</span>
+                </li>
+                <li>
+                  <i class="fas fa-envelope"></i>
+                  <span>hr@pairedhealthsolutions.co.uk</span>
+                </li>
+                <li>
+                  <i class="fas fa-phone"></i>
+                  <span>+44 7944 624143</span>
+                </li>
+                <li>
+                  <i class="fas fa-phone"></i>
+                  <span>+44 7594 302061</span>
+                </li>
+              </ul>
+              <!-- <form>
+                <div class="form-element">
+                  <input
+                    type="text"
+                    class="form-control"
+                    placeholder="Your name"
+                  />
+                </div>
+                <div class="form-element">
+                  <input
+                    type="email"
+                    class="form-control"
+                    placeholder="Your email"
+                  />
+                </div>
+                <div class="form-element">
+                  <textarea
+                    rows="5"
+                    placeholder="Your Message"
+                    class="form-control"
+                  ></textarea>
+                </div>
+                <button type="submit" class="btn btn-white btn-submit">
+                  <i class="fas fa-arrow-right"></i> Send Message
+                </button>
+              </form> -->
+            </div>
           </div>
-        </div>
-      </section>
+</section>
+
       <!-- end of contact section -->
     </main>
 
